# qween3-5-verilog-finetune

./: .gitignore  README.md  kaggle_qwen3_coder_30B_verilog.ipynb  main.py  pyproject.toml  qwen_35_08B_full_finetunning.ipynb
configs/: _run.yaml  lora.yaml
scripts/: benchmark.py  clone_data.py  export_gguf.py  finetune.py  prepare_dataset.py
